# terax-ai

./: .gitignore  CLAUDE.md
.docs/bugfixes/1. windows-transparent-background/: BUG_REPORT_RESOLUTION.md
.github/workflows/: signpath-test.yml
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/favorite-workspaces/: plan.md  spec.md
conductor/tracks/image-viewer/: plan.md  spec.md
conductor/tracks/saved-workspaces/: plan.md  spec.md
scripts/: build-windows.ps1
src/: main.tsx
src-tauri/: .gitignore  AppxManifest.xml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/shell_ext/: Cargo.toml
src-tauri/shell_ext/src/: lib.rs
src-tauri/src/: lib.rs
src-tauri/src/modules/fs/: file.rs
src/app/: App.tsx
src/lib/: launchDir.ts  workspaceHistory.test.ts  workspaceHistory.ts
src/modules/editor/: EditorPane.tsx  EditorStack.tsx  ImagePane.tsx
src/modules/editor/lib/: imageUtils.test.ts  imageUtils.ts
src/modules/settings/: store.ts
src/modules/shortcuts/: shortcuts.ts
src/modules/statusbar/: CwdBreadcrumb.tsx  StatusBar.tsx
src/modules/terminal/: PaneTreeView.tsx
src/modules/workspace/: WorkspacePicker.tsx  index.ts
