[package]
name = "terax_shell_ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "terax_shell_ext"
crate-type = ["cdylib"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
] }
windows-core = "0.61"
